<resources>
    <string name="app_name">Orvil</string>
    <string name="iniciarsessao">Iniciar Sessão</string>
    <string name="senha">Senha</string>
    <string name="email">E-mail</string>
    <string name="registre">Registre-se aqui</string>
    <string name="entrarfb">Entrar com o Facebook</string>
    <string name="esqueci">Esqueceu sua senha?</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="lido">Lido</string>
    <string name="lendo">Lendo</string>
    <string name="lerei">Lerei</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_livros">LivrosActivity</string>

    <string name="facebook_app_id">141188153356807</string>
    <string name="fb_login_protocol_scheme">fb141188153356807</string>

    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_cadastro">CadastroActivity</string>
    <string name="hint_name">Nome</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_data">Data de Nascimento</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="sexo">Sexo</string>
    <string name="conf_senha">Confirmar senha</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_conf_senha">Confirmar senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="continuar">Continuar</string>
    <string name="como_chamar">Como devemos te chamar?</string>
    <string name="digite_email">Digite seu e-mail, apenas para contato:</string>
    <string name="name_ex">Exemplo: Sirius Black III</string>
    <string name="ex_email">Exemplo: lady.macbeth@gmail.com</string>
    <string name="conte_mais">Conte mais um pouco sobre você:</string>
    <string name="data_exemplo">Exemplo: 11/05/2001</string>
    <string name="agora_senha">Agora, digite uma senha para proteger seus livros:</string>
    <string name="formato_senha">A senha deve possuir no mínimo 8 caracteres e conter números e letras.</string>


    <string name="erro_name">Nome deve possuir pelo menos três caracteres.</string>
    <string name="erro_email_size">Preencha o e-mail antes de continuar.</string>
    <string name="erro_email_valid">Digite um e-mail válido.</string>
    <string name="erro_date_valid">Selecione uma data válida.</string>
    <string name="erro_senha">A senha deve possuir números e letras.</string>
    <string name="erro_conf_senha">A confirmação deve ser igual a senha digitada.</string>
    <string name="erro_senha_size">Escolha uma senha com pelo menos 8 caracteres.</string>
    <string name="escolha_foto">Para finalizar, escolha uma foto bacana:</string>
    <string name="pular">Pular</string>
    <string name="camera">Câmera</string>
    <string name="galeria">Galeria</string>
    <string name="como_encontrar">Como você prefere que a gente ache seu livro?</string>
    <string name="status">status</string>
    <string name="quero_ler">Quero Ler</string>
    <string name="digite_isbn">Digite o ISBN ou click no ícone de camera para ler o código de barras:</string>
    <string name="isbn">ISBN</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="aproxime_camera">Aproxime a câmera para fazer a leitura do código:</string>
    <string name="editora">Editora:</string>
    <string name="categoria">Categoria:</string>
    <string name="ano">Ano:</string>
    <string name="descricao">Descrição</string>
    <string name="paginas">Páginas:</string>
    <string name="idioma">Idioma:</string>


</resources>
